--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -43,7 +43,8 @@
 
 <div id="main-content" class="container">
 	<h2 class="text-center">Our Menu</h2>
-	<section class="jumbotron">
+	<div class="jumbotron">
+	<section class="col-xs-12">
 		<h3 id="name-menu" class="text-center">Chicken</h3>
 		<span id="describe">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -138,6 +139,7 @@
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
 	</section>
 	<a href="#header-nav" id="to-top">Back to top</a>
+	</div>
 </div>
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
